RESOLVED FIXED281311
[Flex] Flex container with no flex item should not run flex layout
https://bugs.webkit.org/show_bug.cgi?id=281311
Summary [Flex] Flex container with no flex item should not run flex layout
alan
Reported 2024-10-11 09:29:42 PDT
ssia
Attachments
Patch (5.85 KB, patch)
2024-10-11 09:31 PDT, alan
no flags
Patch (6.08 KB, patch)
2024-10-13 20:10 PDT, alan
no flags
Patch (6.11 KB, patch)
2024-10-14 05:31 PDT, alan
ews-feeder: commit-queue-
[fast-cq]Patch (6.17 KB, patch)
2024-10-14 08:46 PDT, alan
no flags
alan
Comment 1 2024-10-11 09:30:54 PDT
*** Bug 281312 has been marked as a duplicate of this bug. ***
alan
Comment 2 2024-10-11 09:31:46 PDT
alan
Comment 3 2024-10-13 20:10:21 PDT
alan
Comment 4 2024-10-14 05:31:24 PDT
alan
Comment 5 2024-10-14 08:46:28 PDT
Created attachment 472934 [details] [fast-cq]Patch
EWS
Comment 6 2024-10-14 10:01:31 PDT
Committed 285129@main (596bf1bd8757): <https://commits.webkit.org/285129@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472934 [details].
Radar WebKit Bug Importer
Comment 7 2024-10-14 10:02:17 PDT
Note You need to log in before you can comment on or make changes to this bug.