[Flex] Flex container with no flex item should not run flex layout https://bugs.webkit.org/show_bug.cgi?id=281311

Reviewed by Antti Koivisto.

* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForFlexLayoutWithReason):
(WebCore::LayoutIntegration::printReason):
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::performFlexLayout):
(WebCore::RenderFlexibleBox::layoutAndPlaceFlexItems):
(WebCore::RenderFlexibleBox::layoutUsingFlexFormattingContext):

Canonical link: https://commits.webkit.org/285129@main